--- a/index.html
+++ b/index.html
@@ -345,6 +345,28 @@
     <section class="hero">
       <div class="card">
         <div class="card-inner">
+          
+          <!-- FOTO DE PERFIL -->
+          <div style="
+            width:140px;
+            height:140px;
+            border-radius:50%;
+            overflow:hidden;
+            border:1px solid rgba(255,255,255,.15);
+            box-shadow: 0 12px 30px rgba(0,0,0,.45);
+            margin-bottom:18px;
+          ">
+            <img
+              src="assets/img/headshot_circle.png"
+              alt="Fabrício Borges"
+              style="
+                width:100%;
+                height:100%;
+                object-fit:cover;
+              "
+            />
+          </div>
+          <!-- FIM FOTO -->
           <div class="kicker">
             <span class="badge">Databricks • Azure • SQL • Python • Power BI</span>
             <span class="badge">Data Governance • Analytics Engineering • Storytelling</span>
