--- a/index.html
+++ b/index.html
@@ -383,9 +383,9 @@
 
             <div class="quick">
               <div class="chip"><b>Atuação:</b> Data Engineer / Data Scientist</div>
-              <div class="chip"><b>Foco:</b> Lakehouse, BI, Governança</div>
+              <div class="chip"><b>Foco:</b> Cloud, Orquestração, Versionamento, BI, Governança</div>
               <div class="chip"><b>Entrega:</b> D-1 e performance de indicadores</div>
-              <div class="chip"><b>Stack:</b> SQL • Python • Databricks • Power BI</div>
+              <div class="chip"><b>Stack:</b> SQL • Python • Databricks • Airflow • Git • Power BI</div>
             </div>
           </div>
 
@@ -400,9 +400,9 @@
 
             <div class="quick">
               <div class="chip"><b>Role:</b> Data Engineer / Data Scientist</div>
-              <div class="chip"><b>Focus:</b> Lakehouse, BI, Governance</div>
+              <div class="chip"><b>Focus:</b> Cloud, Orchestration, Versioning, BI, Governance</div>
               <div class="chip"><b>Delivery:</b> D-1 visibility & KPI performance</div>
-              <div class="chip"><b>Stack:</b> SQL • Python • Databricks • Power BI</div>
+              <div class="chip"><b>Stack:</b> SQL • Python • Databricks • Airflow • Git • Power BI</div>
             </div>
           </div>
         </div>
@@ -412,11 +412,11 @@
         <!-- PT -->
         <div class="mini" data-lang="pt">
           <h3>Resumo rápido</h3>
-          <p><b>+3 anos</b> em dados, BI e automação, entregando pipelines, modelos e dashboards para escala nacional.</p>
+          <p><b>+10 anos de experiência em engenharia</b>, com sólida atuação em dados, BI e automação nos últimos anos. Especialista em arquitetura analítica, pipelines escaláveis, governança e visualização executiva, entregando soluções de dados para operações de <b>escala nacional</b>, com foco em confiabilidade, performance e tomada de decisão.</p>
         </div>
         <div class="mini" data-lang="pt">
           <h3>Diferenciais</h3>
-          <p>Governança (dicionário, padrão DAX/modelagem), performance e UX/UI aplicado a BI.</p>
+          <p>Forte base em <b>engenharia de dados e cloud</b>, com domínio de boas práticas de versionamento (Git), orquestração de pipelines (Airflow), arquitetura analítica e governança. Experiência na construção de pipelines escaláveis e observáveis, com <b>padronização de métricas</b>, dicionário de dados, controle de qualidade, performance e segurança, garantindo confiabilidade e consistência dos dados em ambientes corporativos.</p>
         </div>
         <div class="mini" data-lang="pt">
           <h3>Interesses</h3>
@@ -426,11 +426,11 @@
         <!-- EN -->
         <div class="mini" data-lang="en">
           <h3>Quick summary</h3>
-          <p><b>3+ years</b> across data, BI, and automation, delivering pipelines, models and dashboards at scale.</p>
+          <p>10+ years of engineering experience</b>, with strong focus on data, BI, and automation in recent years. Specialized in analytics architecture, scalable pipelines, governance, and executive dashboards, delivering data solutions at <b>national scale</b> with emphasis on reliability, performance, and decision-making.</p>
         </div>
         <div class="mini" data-lang="en">
           <h3>Strengths</h3>
-          <p>Governance (data dictionary, DAX/modeling standards), performance and UX/UI for BI.</p>
+          <p>Strong foundation in <b>data engineering and cloud</b>, with solid knowledge of best practices in version control (Git), pipeline orchestration (Airflow), analytics architecture, and governance. Experienced in building scalable and observable pipelines, with <b>standardized metrics</b>, data dictionaries, quality controls, performance, and security, ensuring reliable and consistentdata across enterprise environments.</p>
         </div>
         <div class="mini" data-lang="en">
           <h3>Interests</h3>
@@ -460,7 +460,7 @@
         <ul class="bullets" data-lang="pt">
           <li>Desenvolvimento de dashboards executivos em Power BI com foco em storytelling e clareza de decisão.</li>
           <li>Implementação de pipelines e camadas analíticas em Databricks (ingestão, transformação e consumo).</li>
-          <li>Desenho e evolução de arquitetura em Azure (boas práticas, governança e escalabilidade).</li>
+          <li>Desenho e evolução de arquitetura(boas práticas, governança e escalabilidade).</li>
           <li>Criação de padrões e manual de boas práticas (modelagem, dicionário de dados e padronização DAX).</li>
           <li>Automação de processos com Power Automate (RPA) integrando fluxos de negócio e dados.</li>
         </ul>
@@ -468,7 +468,7 @@
         <ul class="bullets" data-lang="en">
           <li>Built executive Power BI dashboards with strong storytelling and decision clarity.</li>
           <li>Implemented Databricks pipelines and analytics layers (ingestion, transformations, consumption).</li>
-          <li>Designed and improved Azure architecture (best practices, governance, scalability).</li>
+          <li>Designed and improved architecture (best practices, governance, scalability).</li>
           <li>Created standards and best-practices documentation (modeling, data dictionary, DAX conventions).</li>
           <li>Automated processes with Power Automate (RPA), connecting business workflows and data.</li>
         </ul>
@@ -634,28 +634,7 @@
           <li>Advanced mathematical foundations for modeling, optimization, and analytical thinking.</li>
         </ul>
       </article>
-
-      <article class="item">
-        <div class="item-head">
-          <div>
-            <div class="role" data-lang="pt">Próximos passos</div>
-            <div class="role" data-lang="en">Next steps</div>
-            <div class="company" data-lang="pt">como evoluir esse site</div>
-            <div class="company" data-lang="en">how to evolve this site</div>
-          </div>
-          <div class="meta">v1</div>
-        </div>
-        <ul class="bullets" data-lang="pt">
-          <li>Adicionar seção de <b>Projetos</b> com links, prints e stack por projeto.</li>
-          <li>Incluir <b>cases</b> (problema → solução → impacto) em formato de cards.</li>
-          <li>Subir CV em PDF e linkar no botão principal.</li>
-        </ul>
-        <ul class="bullets" data-lang="en">
-          <li>Add a <b>Projects</b> section with links, screenshots and stack per project.</li>
-          <li>Include <b>case studies</b> (problem → solution → impact) as cards.</li>
-          <li>Upload your resume as PDF and link it as a primary button.</li>
-        </ul>
-      </article>
+    
     </section>
 
     <footer>
