publish dashboard vendas (vite/react)

--- a/index.html
+++ b/index.html
@@ -678,18 +678,17 @@
 
     <!-- Placeholder cards -->
     <div class="grid" style="margin-top:14px;">
-      <div class="item" style="background:rgba(255,255,255,.02);">
-        <div class="role" data-lang="pt">Projeto 1 (adicione aqui)</div>
-        <div class="role" data-lang="en">Project 1 (add here)</div>
-        <div class="company" data-lang="pt">Problema → solução → impacto</div>
-        <div class="company" data-lang="en">Problem → solution → impact</div>
-      </div>
-      <div class="item" style="background:rgba(255,255,255,.02);">
-        <div class="role" data-lang="pt">Projeto 2 (adicione aqui)</div>
-        <div class="role" data-lang="en">Project 2 (add here)</div>
-        <div class="company" data-lang="pt">Link, stack e resultados</div>
-        <div class="company" data-lang="en">Links, stack and outcomes</div>
-      </div>
+      <a class="item" href="projetos/dashboard-vendas/" style="background:rgba(255,255,255,.02); display:block;">
+        <div class="role" data-lang="pt">Dashboard de Vendas (interativo)</div>
+        <div class="role" data-lang="en">Sales Dashboard (interactive)</div>
+
+        <div class="company" data-lang="pt">KPIs, filtros, drill-down e visão executiva (D-1)</div>
+        <div class="company" data-lang="en">KPIs, filters, drill-down and executive view (D-1)</div>
+
+        <div class="skills" style="margin-top:12px;">
+          <span class="tag">Power BI</span><span class="tag">UX/UI</span><span class="tag">Storytelling</span>
+        </div>
+      </a>
     </div>
   </article>
 
