--- a/index.html
+++ b/index.html
@@ -678,7 +678,13 @@
 
     <!-- Placeholder cards -->
     <div class="grid" style="margin-top:14px;">
-      <a class="item" href="projetos/dashboard-vendas/" style="background:rgba(255,255,255,.02); display:block;">
+      <a
+        class="item"
+        href="https://665537e9-711b-48d5-8384-c1a512646089-00-38qhm80ui12ab.riker.replit.dev"
+        target="_blank"
+        rel="noopener noreferrer"
+        style="background:rgba(255,255,255,.02); display:block;"
+      >
         <div class="role" data-lang="pt">Dashboard de Vendas (interativo)</div>
         <div class="role" data-lang="en">Sales Dashboard (interactive)</div>
 
@@ -690,6 +696,7 @@
         </div>
       </a>
     </div>
+
   </article>
 
   <!-- GenAI / ML -->
